 . CocosNode: children is a property (issue #185)
 . Demos: Creating Window and attaching cocos2d to it (issue #180)
 . Director: OpenGLview is attached to a given UIView/UIWindow (issue #180)
 . Director: winSize returns a CGSize (not a CGRect) (issue #159)
 . Effects: Added Effects support (Grid and TiledGrid) (issue #183)
 . Transitions: added new transitions: 
	 SplitRowsTransition, SplitColsTransition, TurnOffTilesTransition,
	 FadeTRTransition, FadeBLTransition, FadeUpTransition, FadeDownTransition
     (issue #187)

 
version 0.6.3 - 28-Jan-2009
 . Actions: ScaleTo & ScaleBy supports X and Y factors (issue #156)
 . Actions: Added collections of Ease Actions (issue #157)
 . Chipmunk: cpFlaot is a float, not a double (issue #130)
 . CocosNode: fixed absolutePosition (issue #140)
 . CocosNode: unschedule timers only when running (issue #142)
 . CocosNode: prevents crash under certain circumstances while executing actions (issue #141)
 . Demos: Added Texture2dDemo example (issue #169)
 . Demos: SpritesDemo has an improved Accelerate example (issue #168)
 . Demos: ParticlesDemo has the Rain Particle example (issue #136)
 . Demos: Added EaseDemo showing all the ease capabilities (issue #158)
 . Director: allow cleanup when deallocing the director (issue #144)
 . Director: avoid useless GL commands when displaying FPS (issue #162)
 . Director: possibility to change the DepthBuffer size (issue #160)
 . Label: possibility to create Label without dimensions and aligment (issue #154)
 . Menu: MenuItemToggle supports assigning the selectedIndex (issue #152)
 . Menu: aligment takes into account if status bar is present (issue #131)
 . MenuItem: improved compiler warning (issue #147)
 . Misc: added 'f' to numbers so they are floats, not doubles (issue #130)
 . Particles: added ParticleRain (issue #136)
 . Particles: center of emitter can be moved independently from position (issue #138)
 . Sprites: fixed possible memory leaks (issue #139)